--- a/scripts/Capstone_project.ipynb
+++ b/scripts/Capstone_project.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This notebook will be mainly used for the capstone project.\n",
-    "\n",
-    "\n"
+    "### This notebook will be mainly used for the capstone project."
    ]
   },
   {
@@ -21,20 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(\"Hello Capstone Project Course!\")? (<ipython-input-5-5f80010f654f>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-5f80010f654f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print \"Hello Capstone Project Course!\"\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(\"Hello Capstone Project Course!\")?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Capstone Project Course!\n"
      ]
     }
    ],
    "source": [
-    "print \"Hello Capstone Project Course!\""
+    "print (\"Hello Capstone Project Course!\")"
    ]
   },
   {
